--- a/35-44 CLIWeather/package.json
+++ b/35-44 CLIWeather/package.json
@@ -13,6 +13,7 @@
   "author": "Timofey Ya",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.26.0",
     "chalk": "^5.0.0",
     "dedent-js": "^1.0.1"
   }
